[package]
name = "turtle"
version = "0.1.0"
authors = [
    "Oleksandr Vdovenko <Oleksandr.Vdovenko@silabs.com>",
    "Johann Fridriksson <Johann.Fridriksson@silabs.com>",
    "Jakob Buron <jakob.buron@silabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
cargo-fuzz = "*"
lalrpop-util = "0.19"
regex = "1"
